Basic effect-type created.

--- a/examples/examples.fsproj
+++ b/examples/examples.fsproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../src/FIO.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
 
