Changed examples name.

--- a/examples/examples.fsproj
+++ b/examples/examples.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="Examples.fs" />
   </ItemGroup>
 
 </Project>
