--- a/examples/examples.fsproj
+++ b/examples/examples.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Ring.fs" />
+    <Compile Include="Pingpong.fs" />
     <Compile Include="Examples.fs" />
   </ItemGroup>
 
