--- a/Benchmarks/Properties/launchSettings.json
+++ b/Benchmarks/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Benchmarks": {
       "commandName": "Project",
-      "commandLineArgs": "--runtime \"Naive\" --pingpong 3000 --threadring 3000 1 --big 3000 1 --bang 3000 1 --runs 20"
+      "commandLineArgs": "--runtime \"Naive\" --bang 2500 1 --runs 20"
     }
   }
 }
