Updated CLI arguments and benchmarks.

--- a/Benchmarks/Properties/launchSettings.json
+++ b/Benchmarks/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Benchmarks": {
       "commandName": "Project",
-      "commandLineArgs": "--runtime Naive --pingpong 10000 --threadring 2000 1 --big 2000 1 --bang 2000 1 --runs 1"
+      "commandLineArgs": "--advanced 2 2 10 --pingpong 10000 --threadring 2000 1 --bang 2000 1 --runs 1"
     }
   }
 }
