--- a/Benchmarks/Properties/launchSettings.json
+++ b/Benchmarks/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Benchmarks": {
       "commandName": "Project",
-      "commandLineArgs": "--advanced-runtime 7 1 15 --runs 30 --pingpong 30000 --threadring 2000 1 --big 500 1 --bang 3000 1 --reversebang 3000 1"
+      "commandLineArgs": "--deadlocking-runtime 7 1 15 --runs 30 --pingpong 120000"
     }
   }
 }
