--- a/FIO/FIO.fsproj
+++ b/FIO/FIO.fsproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <Compile Include="FIO.fs" />
         <Compile Include="Runtime.fs" />
+        <Compile Include="FIOBuilder.fs" />
     </ItemGroup>
 
     <ItemGroup>
