Experimentary implementation of computation expressions.

--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\FIO\FIO.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="7.0.300" />
+  </ItemGroup>
+
 </Project>
