--- a/FIO/FIO.fsproj
+++ b/FIO/FIO.fsproj
@@ -1,20 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<WarningsAsErrors>true</WarningsAsErrors>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <WarningsAsErrors>true</WarningsAsErrors>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Compile Include="FIO.Core.fs" />
-		<Compile Include="FIO.Runtime.Core.fs" />
-		<Compile Include="FIO.Runtime.Tools.fs" />
-		<Compile Include="FIO.Runtime.Naive.fs" />
-		<Compile Include="FIO.Runtime.Intermediate.fs" />
-		<Compile Include="FIO.Runtime.Advanced.fs" />
-		<Compile Include="FIO.Runtime.Deadlocking.fs" />
-		<Compile Include="FIOApp.fs" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Include="FIO.Core.fs"/>
+        <Compile Include="FIO.Net.fs" />
+        <Compile Include="FIO.Runtime.Core.fs"/>
+        <Compile Include="FIO.Runtime.Tools.fs"/>
+        <Compile Include="FIO.Runtime.Naive.fs"/>
+        <Compile Include="FIO.Runtime.Intermediate.fs"/>
+        <Compile Include="FIO.Runtime.Advanced.fs"/>
+        <Compile Include="FIO.Runtime.Deadlocking.fs"/>
+        <Compile Include="FIOApp.fs"/>
+    </ItemGroup>
 
 </Project>
