Even more new times ahead.

--- a/Examples/Examples.fsproj
+++ b/Examples/Examples.fsproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <Compile Include="Examples.fs" />
+        <None Include="ServerApp.fsx" />
+        <None Include="ClientApp.fsx" />
     </ItemGroup>
 
     <ItemGroup>
