--- a/FIO/FIO.fsproj
+++ b/FIO/FIO.fsproj
@@ -16,7 +16,7 @@
         <Compile Include="FIO.Runtime.Intermediate.fs" />
         <Compile Include="FIO.Runtime.Advanced.fs" />
         <Compile Include="FIO.Runtime.Deadlocking.fs" />
-        <Compile Include="FIOApp.fs" />
+        <Compile Include="FIO.Core.App.fs" />
     </ItemGroup>
 
     <ItemGroup>
