--- a/FIO.Examples/FIO.Examples.fsproj
+++ b/FIO.Examples/FIO.Examples.fsproj
@@ -1,19 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <OutputType>Exe</OutputType>
-        <WarningsAsErrors>true</WarningsAsErrors>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<OutputType>Exe</OutputType>
+		<WarningsAsErrors>true</WarningsAsErrors>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <None Include="ChatApplication\FIOChatClientApp.fsx" />
-        <None Include="ChatApplication\FIOChatServerApp.fsx" />
-        <Compile Include="Examples.fs" />
-    </ItemGroup>
+	<ItemGroup>
+		<Compile Include="Examples.fs" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\FIO\FIO.fsproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FIO" Version="0.0.1" />
+	</ItemGroup>
 
 </Project>
