--- a/src/FIO.Tests/FIO.Test.fsproj
+++ b/src/FIO.Tests/FIO.Test.fsproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="FIO.Runtime.Tests.fs" />
+		<Compile Include="Runtime.Test.fs" />
 	</ItemGroup>
 
 	<ItemGroup>
