--- a/src/FIO.Examples/FIO.Example.fsproj
+++ b/src/FIO.Examples/FIO.Example.fsproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="Examples.fs" />
+		<Compile Include="Program.fs" />
 	</ItemGroup>
 
 	<ItemGroup>
