--- a/src/FIO/FIO.fsproj
+++ b/src/FIO/FIO.fsproj
@@ -10,7 +10,8 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/iyyel/fio</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<Version>0.0.1</Version>
+		<Version>0.0.2</Version>
+		<PackageIcon>fio_logo_wide.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -24,6 +25,17 @@
 		<Compile Include="Runtime\Deadlocking.fs" />
 		<Compile Include="Library\Network.fs" />
 		<Compile Include="Core.Extensions\App.fs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\..\images\fio_logo_wide.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
