--- a/src/FIO/FIO.fsproj
+++ b/src/FIO/FIO.fsproj
@@ -27,6 +27,16 @@
 		<Compile Include="Core.Extensions\App.fs" />
 	</ItemGroup>
 
+	<PropertyGroup>
+		<!-- 
+		Ensure debugging information is easily found, so that editors can locate the source code locations for your library.
+        This slightly increases the size of your package, but the usability benefits are worth it.
+		-->
+		<DebugType>embedded</DebugType>
+		<!-- Ensure that files that are generated during the build by the .NET SDK are also included in your compiled library. -->
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<None Include="..\..\images\fio_logo_wide.png">
 			<Pack>True</Pack>
